# logosky

./: CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md  build.rs
.github/workflows/: ci.yml  loc.yml
ci/: miri_sb.sh  miri_tb.sh
examples/: custom_parser.rs  simple_calculator.rs
src/: chumsky.rs  cst.rs  error.rs  keyword.rs  lexer.rs  lib.rs  parseable.rs  parser.rs  punct.rs  syntax.rs  types.rs  utils.rs
src/chumsky/: delimited.rs  ident.rs  macros.rs  operator.rs  separated.rs  skip.rs  token.rs  tokenier.rs
src/chumsky/token/: ident.rs  lit.rs  macros.rs  operator.rs  punct.rs  recovery.rs
src/cst/: cast.rs  error.rs
src/cst/error/: incomplete.rs  node_mismatch.rs  token_mismatch.rs
src/error/: errors.rs  hex_escape.rs  incomplete_syntax.rs  incomplete_token.rs  invalid.rs  invalid_hex_digits.rs  malformed.rs  malformed_literal.rs  missing.rs  unclosed.rs  undelimited.rs  unexpected_end.rs  unexpected_identifier.rs  unexpected_keyword.rs  unexpected_lexeme.rs  unexpected_prefix.rs  unexpected_suffix.rs  unexpected_token.rs  unicode_escape.rs  unknown_lexeme.rs  unopened.rs  unterminated.rs
src/error/incomplete_syntax/: const_generic.rs  type_level.rs
src/lexer/: cache.rs  checkpoint.rs  cursor.rs  emitter.rs  error.rs  input.rs  input_ref.rs  iter.rs  logos.rs  require.rs  source.rs  state.rs  token.rs  token_stream.rs  tokenizer.rs
src/lexer/cache/: blackhole.rs  generic_arraydeque.rs
src/lexer/emitter/: blackhole.rs
src/lexer/source/: bstr.rs  bytes.rs  hipstr.rs
src/lexer/state/: recursion_tracker.rs  token_tracker.rs  tracker.rs
src/lexer/token_stream/: iter.rs
src/lexer/tokenizer/: iter.rs
src/types/: ident.rs  keyword.rs  lit.rs
src/utils/: cmp.rs  const_generic_vec.rs  container.rs  delimiter.rs  errors.rs  escaped.rs  expected.rs  generic_vec.rs  human_display.rs  incomplete_token.rs  knowledge.rs  lexeme.rs  malformed_literal.rs  message.rs  positioned_char.rs  recursion_tracker.rs  sdl_display.rs  syntax.rs  syntax_tree_display.rs  to_equivalent.rs  token_tracker.rs  tracker.rs  unclosed.rs  unexpected_end.rs  unexpected_keyword.rs  unexpected_lexeme.rs  unexpected_prefix.rs  unexpected_suffix.rs  unexpected_token.rs  unknown_lexeme.rs  vec.rs
src/utils/generic_vec/: const_generic.rs  type_level.rs
src/utils/syntax/: const_generic.rs  type_level.rs
tests/: integration_tests.rs  unit_tests.rs
